--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ exportClasses(BumpyMatrix)
 exportClasses(BumpyNumericMatrix)
 exportMethods("[")
 exportMethods("[<-")
+exportMethods("dimnames<-")
 exportMethods("fields<-")
 exportMethods(IQR)
 exportMethods(Math)
