Added tests, bugfixes for the atomic methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportMethods(pmax.int)
 exportMethods(pmin)
 exportMethods(pmin.int)
 exportMethods(quantile)
+exportMethods(range)
 exportMethods(rbind)
 exportMethods(show)
 exportMethods(startsWith)
