--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: BumpyMatrix 
+Package: BumpyMatrix
 Version: 0.99.0
 Date: 2020-11-24
 Title: Bumpy Matrix of Non-Scalar Objects
@@ -13,6 +13,7 @@ Description: Implements the BumpyMatrix class and several subclasses
 Authors@R: person("Aaron", "Lun", role=c("aut", "cre"), email="luna@gene.com")
 License: Genentech, Inc.
 Imports:
+    methods,
     S4Vectors,
     IRanges
 Suggests: 
