Added a split function for easy construction.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("fields<-")
 export()
 export(BumpyMatrix)
 export(fields)
+export(splitToBumpyMatrix)
 export(undim)
 exportClasses(BumpyAtomicMatrix)
 exportClasses(BumpyCharacterMatrix)
