Support sparse representation for the BumpyMatrix. (#4)
* Enable creation of sparse proxies by splitting.
* Switched to splitAsList for CompressedList construction.
* Updated documentation, tests.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Authors@R: person("Aaron", "Lun", role=c("aut", "cre"), email="luna@gene.com")
 License: Genentech, Inc.
 Imports:
     methods,
+    Matrix,
     S4Vectors,
     IRanges
 Suggests: 
