--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,3 +63,5 @@ import(S4Vectors)
 import(methods)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,t)
+importFrom(utils,capture.output)
+importFrom(utils,str)
