Switch to using commonColnames getter/setter.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,8 @@ exportClasses(BumpyMatrix)
 exportClasses(BumpyNumericMatrix)
 exportMethods("[")
 exportMethods("[<-")
+exportMethods("commonColnames<-")
 exportMethods("dimnames<-")
-exportMethods("fields<-")
 exportMethods(IQR)
 exportMethods(Math)
 exportMethods(Math2)
@@ -23,12 +23,12 @@ exportMethods(Ops)
 exportMethods(Summary)
 exportMethods(cbind)
 exportMethods(chartr)
+exportMethods(commonColnames)
 exportMethods(cor)
 exportMethods(cov)
 exportMethods(dim)
 exportMethods(dimnames)
 exportMethods(endsWith)
-exportMethods(fields)
 exportMethods(grep)
 exportMethods(grepl)
 exportMethods(gsub)
