Support unary math/logical operations.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ exportClasses(BumpyIntegerMatrix)
 exportClasses(BumpyLogicalMatrix)
 exportClasses(BumpyMatrix)
 exportClasses(BumpyNumericMatrix)
+exportMethods("!")
 exportMethods("[")
 exportMethods("[<-")
 exportMethods("commonColnames<-")
