Renamed DFrame to DataFrame to support arbitrary subclasses.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(splitToBumpyMatrix)
 export(undim)
 exportClasses(BumpyAtomicMatrix)
 exportClasses(BumpyCharacterMatrix)
-exportClasses(BumpyDFrameMatrix)
+exportClasses(BumpyDataFrameMatrix)
 exportClasses(BumpyIntegerMatrix)
 exportClasses(BumpyLogicalMatrix)
 exportClasses(BumpyMatrix)
