Added length method, Ops for atomic matrices.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ exportMethods(endsWith)
 exportMethods(grep)
 exportMethods(grepl)
 exportMethods(gsub)
+exportMethods(length)
 exportMethods(mad)
 exportMethods(mean)
 exportMethods(median)
