Added a lengths() method for BumpyMatrices.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ exportMethods(grep)
 exportMethods(grepl)
 exportMethods(gsub)
 exportMethods(length)
+exportMethods(lengths)
 exportMethods(mad)
 exportMethods(mean)
 exportMethods(median)
