Added an unsplit method to get back the original DF.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(BumpyMatrix)
 export(redim)
 export(splitAsBumpyMatrix)
 export(undim)
+export(unsplitAsDataFrame)
 exportClasses(BumpyAtomicMatrix)
 exportClasses(BumpyCharacterMatrix)
 exportClasses(BumpyDataFrameMatrix)
@@ -66,5 +67,6 @@ import(S4Vectors)
 import(methods)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,t)
+importFrom(S4Vectors,DataFrame)
 importFrom(utils,capture.output)
 importFrom(utils,str)
